--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 install:
+- apt-get install ruby ruby-dev
 - pip install -r requirements.txt
 script:
 - ansible-playbook -i 127.0.0.1, -c local -s -e ssh_user=travis -e hostname=travis-tmp-host.demo.modcloth.com
