--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 install:
-- sudo apt-get install ruby ruby-dev
+- sudo apt-get install ruby ruby-dev apt-file
+- sudo updatedb
+- apt-file search gem
+- which gem
 - pip install -r requirements.txt
 script:
 - ansible-playbook -i 127.0.0.1, -c local -s -e ssh_user=travis -e hostname=travis-tmp-host.demo.modcloth.com
