--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 install:
 - sudo apt-get install ruby ruby-dev apt-file
-- sudo updatedb
+- sudo apt-file update
 - apt-file search gem
 - which gem
 - pip install -r requirements.txt
