--- a/example.yml
+++ b/example.yml
@@ -2,6 +2,7 @@
 - hosts: all
   roles:
   - role: modcloth.newrelic_haproxy_agent
+    new_relic_license_key: "ABCD"
     newrelic_haproxy_agent_agents:
     - name: 'Foo'
       uri: 'www.example.com/stats;#csv'
