_ -> - for consistency with other roles

--- a/example.yml
+++ b/example.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   roles:
-  - role: modcloth.newrelic_haproxy_agent
+  - role: modcloth.newrelic-haproxy-agent
     new_relic_license_key: "ABCD"
     newrelic_haproxy_agent_agents:
     - name: 'Foo'
